# filesmith

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: Makefile
docs/source/: conf.py  index.rst
scripts/: file_grep.py  list_files.py
src/filesmith/: __init__.py  cli.py  cli_findmove.py  cli_knapsack.py  core.py  engine.py  finder.py  knapsack.py  transfer.py
src/ooxlm/: README.md  __init__.py
src/ooxlm/common/: zip_ops.py
src/ooxlm/docx/: __init__.py  simple_docx_editor.py  xml_utils.py
src/ooxlm/pptx/: __init__.py  simple_pptx_editor.py  xml_utils.py
tests/: test_cli.py  test_cli_findmove.py  test_core.py  test_engine.py  test_finder.py  test_knapsack.py  test_simple_docx_editor.py  test_simple_pptx_editor.py  test_transfer.py  test_zip_ops.py
